# ncm-audio-converter

./: NCMAudioConverterApp.spec  README.md  build.spec  pyproject.toml
.github/workflows/: build-windows.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.vue  style.css  types.ts
packaging/: desktop.spec
scripts/: build_macos.sh  build_windows.ps1
src/ncm_audio_converter/: __init__.py  cli.py  converter.py  desktop.py  ncm_decoder.py  web.py
